# network-visualizer

./: README.md  bake.hcl  classes.py  main.py  pyproject.toml  report.json  test.py  vul.xml
.github/workflows/: build.yaml
app/API/app/controllers/: network.py
app/API/app/routes/: network.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.jsx
app/frontend/src/components/: DeviceNode.jsx  Network.jsx
src/: classes.py  main.py
src/app/API/app/: __init__.py
src/app/API/app/controllers/: network.py
src/app/API/app/routes/: health.py  network.py
src/app/frontend/: Dockerfile  index.html  package-lock.json  package.json
src/app/frontend/src/: App.jsx
src/app/frontend/src/components/: Device.jsx  DeviceNode.jsx  Network.jsx  Vuln.jsx
