[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nw-scanner"
version = { git = "v*.*.*" }
description = "Network scanner and visualizer on steroids"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python3-nmap",
    "scapy",
    "pydantic",
    "pydantic-extra-types",
    "pandas",
    "PrettyTable",
    "tabulate",
    "tqdm",
    "netifaces",
    "Flask",
    "Flask-Cors",
    "requests"
]
dev-dependencies = [
    "pytest",
    "pytest-cov"
]

[tool.poetry.scripts]
nw-scanner = "app.main:cli"

[tool.poetry.packages]
packages = [
    { include = "app" }
]