[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nw-scanner"
dynamic = ["version"]
description = "Network scanner and visualizer on steroids"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python3-nmap",
    "scapy",
    "pydantic",
    "pydantic-extra-types",
    "pandas",
    "PrettyTable",
    "tabulate",
    "tqdm",
    "netifaces",
    "Flask",
    "Flask-Cors",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
nw-scanner = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
